--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,21 +3,24 @@ services:
   web:
     image: nginx:alpine
     working_dir: /var/www
-    volumes:
-      - ./src:/var/www
-      - ./default.conf:/etc/nginx/conf.d/default.conf
     ports:
       - "80:80"
+    volumes:
+      - './docker/etc/nginx/default.conf:/etc/nginx/conf.d/default.conf'
+      - '.:/var/www:cached'
     environment:
       - NGINX_HOST=test.local
     links:
       - php
     restart: always
   php:
-    image: thecodingmachine/php:8.1-v4-fpm
-    volumes:
-      - ./src:/var/www
+    image: 'devilbox/php-fpm:8.0-work'
     restart: always
+    working_dir: /var/www
+    volumes:
+      - './docker/etc/php/php.ini:/usr/local/etc/php/php.ini'
+      - './docker/etc/php/xxx-devilbox-default-php.ini:/usr/local/etc/php/conf.d/xxx-devilbox-default-php.ini'
+      - './:/var/www:cached'
 
 
 
